--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 
-$bgFooter:#e6dbd1;
+$bgFooter:#d8cabc;
 $bgHeader:#e6dbd1;
 $bgMain:linear-gradient(to bottom, #fff9ed, #fef5e9, #fcf2e4, #fbeee0, #faeadc, #ddcfc2, #dfcbbc, #dac8ba, #d3c2b5, #c4b4a7, #b5a599);
 $fontFamily:'Nuosu SIL', serif;
