--- a/scss/_headeryfooter.scss
+++ b/scss/_headeryfooter.scss
@@ -4,17 +4,38 @@
     .logo {
         font-family:'Playfair Display SC', serif ;
         font-size: 150%;
+       
     }
     .div__nav{
         margin-left: 30%;
-        .colorF {
+        .link{
+            display: inline-block;
+            position: relative;
             font-family:'Playfair Display SC', serif ;
             color: black;
             letter-spacing: 2px;
             
         }
+        .link::after{
+            content:'';
+            width: 100%;
+            height:1px;
+            background-color: rgb(23, 22, 22);
+            border-radius:4px;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            transform:scaleX(0);
+            transform-origin: left;
+            transition: transform .25s ease;
+        }
+        .link:hover::after{
+            transform:scaleX(1);
+        }
     }
 }
+
+
 
 /*FOOTER*/
 .colorFot{
@@ -23,7 +44,7 @@
         text-align: center;
         font-family:$fontFamily;
         .div__fot2{
-            margin-left: 5%;
+            margin-right: 10%;
             .div__a {
                 font-weight: bold;
                 text-decoration: none;
@@ -33,6 +54,15 @@
          
     }
 }
+.footer3{
+    margin-right: 5%;
+}
+.promo{
+    background-color: map-get($mapa-colores,colormains);
+    color: black;
+}
+
 .logito{
     color:$fontColor2;
+
 }
